added functions to add card to dom

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
 		
 		<div id="mainContent">
 			<div></div>
-			<div class="mainContents list"></div>
+			<div class="mainCards list"></div>
 		</div>
 	</body>
 </html>
