--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,11 @@
 		</div>
 		
 		<div id="mainContent">
-			<div></div>
+			<div class="mainTop">
+				<button class="filter">
+					<img src="./images/settings.svg">
+				</button>
+			</div>
 			<div class="mainCards list"></div>
 		</div>
 	</body>
