--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,7 @@
 	</head>
 
 	<body>
-		<div id="LeftContainer">
-			<div class="userCard"></div>
-			<div class="tabCards"></div>
+		<div id="leftContainer">
 		</div>
 		
 		<div id="mainContent">
