--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TODO Project</title>
+		<link rel="icon" type"image/x-icon" href=
+			"./images/toDoListWhite.ico">
 	</head>
 	
 	<body>
