used prettier on all files in src

--- a/src/template.html
+++ b/src/template.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>TODO Project</title>
-		<link rel="icon" type="image/x-icon" href=
-			"./images/toDoListWhite.ico">
-	</head>
-	
-	<body>
-		<div class="leftContainer">
-			<div class="sidebar"></div>
-		</div>
-		<div class="mainContents"></div>
-	</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>TODO Project</title>
+    <link rel="icon" type="image/x-icon" href="./images/toDoListWhite.ico" />
+  </head>
 
+  <body>
+    <div class="leftContainer">
+      <div class="sidebar"></div>
+    </div>
+    <div class="mainContents"></div>
+  </body>
+</html>
